--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,1 +1,49 @@
+@import "normalize.css";
+@import "primeflex/primeflex.css";
+@import "primeicons/primeicons.css";
+
+@import "primeng/resources/themes/lara-light-blue/theme.css";
+@import "primeng/resources/primeng.css";
+
+:root {
+    --secondary-color: #c78490;
+}
+
 /* You can add global styles to this file, and also import other style files */
+body,
+html {
+    font-family: var(--font-family);
+    height: 100%;
+}
+
+.bg-parfumerie-privee {
+    background-color: var(--primary-color);
+}
+
+.page-title {
+    color: #343a40;
+    font-size: 1rem;
+    font-weight: 700;
+}
+
+// Scrollbar CSS
+/* Firefox */
+* {
+    scrollbar-width: 8px;
+    scrollbar-color: #9e9e9e #f3f3f3;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+    width: 12px;
+}
+
+*::-webkit-scrollbar-track {
+    background: #f3f3f3;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: #9e9e9e;
+    border-radius: 10px;
+    border: 3px solid #f3f3f3;
+}
