--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -5,6 +5,8 @@
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
 
+@import "leaflet/dist/leaflet.css";
+
 :root {
     --secondary-color: #c78490;
 }
